fix: clean up ldi inputs ctors (#590)