@@ -8,6 +8,7 @@ import be.vlaanderen.informatievlaanderen.ldes.ldio.config.LdioAmqpInRegistrator
 import be.vlaanderen.informatievlaanderen.ldes.ldio.config.OrchestratorConfig;
 import be.vlaanderen.informatievlaanderen.ldes.ldio.types.LdioInput;
 import be.vlaanderen.informatievlaanderen.ldes.ldio.valueobjects.ComponentProperties;
+import io.cucumber.java.After;
 import io.cucumber.java.ParameterType;
 import io.cucumber.java.en.And;
 import io.cucumber.java.en.Then;
@@ -49,6 +50,13 @@ public class AmqpInIntegrationTestSteps extends AmqpIntegrationTest {
 
 	private final TestContext testContext = TestContextContainer.getTestContext();
 	private MessageProducer producer;
+
+	@After
+	public void tearDown() {
+		if(ldioInput != null) {
+			ldioInput.shutdown();
+		}
+	}
 
 	@And("I create a message producer")
 	public void iCreateAMessageProducer() throws JMSException {
@@ -105,13 +113,13 @@ public class AmqpInIntegrationTestSteps extends AmqpIntegrationTest {
 	}
 
 	@Then("Wait for a grace period")
-	public void waitForGracePeriod() throws InterruptedException {
+	public void waitForGracePeriod() {
 		Awaitility.waitAtMost(Duration.of(500, ChronoUnit.MILLIS));
 	}
 
 	@And("The result value will contain the model")
 	public void theResultValueWillContainTheModel() {
-		Model resultModel = RDFParser.fromString(adapterResult.get(0).content()).lang(contentTypeToLang(contentType))
+		Model resultModel = RDFParser.fromString(adapterResult.getFirst().content()).lang(contentTypeToLang(contentType))
 				.build().toModel();
 		assertTrue(resultModel.isIsomorphicWith(inputModel));
 	}
